<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/window"
    tools:context=".activities.Introduction">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            style="@style/h1_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            style="@style/h3_style"
            android:gravity="center"
            android:text="@string/introduction_message"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3_style"
            android:gravity="center"
            android:text="@string/introduction_message2"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/button_style"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/introduction_button"
        android:onClick="start"/>


</RelativeLayout>